--- a/weloveub/app/pages/home/home.html
+++ b/weloveub/app/pages/home/home.html
@@ -10,7 +10,7 @@
   <ion-grid>
     <ion-row>
       <ion-col width-50>
-        <div class="main_menu_card" (click)="goRestaurants()">
+        <div class="main_menu_card" (click)="goRestaurants()" tappable>
           <div>
             <div width="100%" height="100%">
               <img src="build/icons/main_menu/restaurant.png" class="main_menu_card_icon">
@@ -20,7 +20,7 @@
         </div>
       </ion-col>
       <ion-col width-50>
-        <div class="main_menu_card" (click)="goNightClubs()">
+        <div class="main_menu_card" (click)="goNightClubs()" tappable>
           <div>
             <div width="100%" height="100%">
               <img src="build/icons/main_menu/night_club.png" class="main_menu_card_icon">
@@ -32,7 +32,7 @@
     </ion-row>
     <ion-row>
       <ion-col width-50>
-        <div class="main_menu_card" (click)="goResorts()">
+        <div class="main_menu_card" (click)="goResorts()" tappable>
           <div>
             <div width="100%" height="100%">
               <img src="build/icons/main_menu/amralt.png" class="main_menu_card_icon">
@@ -42,7 +42,7 @@
         </div>
       </ion-col>
       <ion-col width-50>
-        <div class="main_menu_card" (click)="addInfo()">
+        <div class="main_menu_card" (click)="addInfo()" tappable>
           <div>
             <div width="100%" height="100%">
               <img src="build/icons/add.png" class="main_menu_card_icon">
