--- a/weloveub/app/pages/add-info/add-info.html
+++ b/weloveub/app/pages/add-info/add-info.html
@@ -11,7 +11,7 @@
   <ion-list>
     <ion-item>
       <ion-label fixed>Төрөл</ion-label>
-        <ion-select [(ngModel)]="type">
+        <ion-select [(ngModel)]="item.type">
           <ion-option value="restaurant">Restaurant</ion-option>
           <ion-option value="nightclub">Night Club</ion-option>
           <ion-option value="resort">Resort</ion-option>
@@ -19,21 +19,21 @@
     </ion-item>
     <ion-item>
       <ion-label fixed>Нэр</ion-label>
-      <ion-input type="text" value="" [(ngModel)]="title"></ion-input>
+      <ion-input type="text" value="" [(ngModel)]="item.title"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label fixed>Утас</ion-label>
-      <ion-input type="text" [(ngModel)]="phone"></ion-input>
+      <ion-input type="text" [(ngModel)]="item.phone"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label fixed>Нээх цаг</ion-label>
-      <ion-select [(ngModel)]="opentime">
+      <ion-select [(ngModel)]="item.opentime">
         <ion-option *ngFor="let ohour of ohours" value="{{ohour}}">{{ohour}}:00</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label fixed>Хаах цаг</ion-label>
-      <ion-select [(ngModel)]="closetime">
+      <ion-select [(ngModel)]="item.closetime">
         <ion-option *ngFor="let ehour of ehours" value="{{ehour}}">{{ehour}}:00</ion-option>
       </ion-select>
     </ion-item>
@@ -43,11 +43,10 @@
   <button (click)="addLocation()">
     <ion-icon name="ios-navigate-outline"></ion-icon>
   </button>
-  <div>lat:{{location.latitude}} lon:{{location.longitude}}</div>
   <hr>
   <div>Зурагнууд:</div>
   <div>
-    <img *ngFor="let photo of photos" src="{{photo}}" style="border: 1px solid #171f32;margin-right: 5px;margin-top: 5px; width: 100px;">
+    <img *ngFor="let photo of photos" src="data:image/jpeg;base64,{{photo}}" style="border: 1px solid #171f32;margin-right: 5px;margin-top: 5px; width: 100px;">
   </div>
   <button (click)="addPhoto()">
       <ion-icon name="ios-camera"></ion-icon>
