--- a/weloveub/app/pages/coffeeshop-list/coffeeshop-list.html
+++ b/weloveub/app/pages/coffeeshop-list/coffeeshop-list.html
@@ -1,5 +1,5 @@
 <ion-navbar *navbar primary>
-  <ion-title>nightclubsList</ion-title>
+  <ion-title>CoffeeShop</ion-title>
 </ion-navbar>
 
 <ion-content padding class="nightclubs-list">
